syntax="proto3";

package readings.v1;

import "google/protobuf/timestamp.proto";

service ReadingsBiDirectionalStreamingService{  
   
  rpc ProcessReadings(stream ProcessReadingsRequest) returns (stream ProcessReadingsResponse);

}


message ProcessReadingsRequest {
  int64 id=1;
  string deviceName=2;
  double temperature =3;
  google.protobuf.Timestamp updatedOn = 4;

}

message ProcessReadingsResponse {
  string message = 1;
}

